# blockcheckw

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NEXT.md  README.md  SECURITY.md  config.json  inside-raw.lst.cleaned  vanilla_results.txt
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-please.yml
docker/: integration.Dockerfile
docs/: DEV.md  QUICKSTART.md
reference/zapret2/: .gitattributes  .gitignore  Makefile  config.default  install_bin.sh  install_easy.sh  uninstall_easy.sh
reference/zapret2/.github/ISSUE_TEMPLATE/: issue-warning.md
reference/zapret2/.github/workflows/: build.yml
reference/zapret2/binaries/: readme.txt
reference/zapret2/common/: custom.sh  installer.sh  ipt.sh  linux_daemons.sh  linux_fw.sh  linux_iphelper.sh  list.sh  nft.sh  virt.sh
reference/zapret2/docs/: LICENSE.txt  changes.txt  changes_compat.txt  manual.en.md  manual.md  readme.md
reference/zapret2/docs/compile/: build_howto_openwrt.txt  build_howto_unix.txt  build_howto_windows.txt
reference/zapret2/docs/compile/builder-linux/: build_deps.sh  build_zapret1.sh  build_zapret2.sh  common.inc  get_toolchains.sh
reference/zapret2/docs/compile/openwrt/package/zapret/ip2net/: Makefile
reference/zapret2/init.d/custom.d.examples.linux/: 20-fw-extra  40-webserver  50-dht4all  50-discord-media  50-nfqws-ipset  50-quic4all  50-stun4all  50-wg4all  80-dns-intercept  99-lan-filter
reference/zapret2/init.d/openrc/: zapret2
reference/zapret2/init.d/openwrt/: 90-zapret2  firewall.zapret2  functions  zapret2
reference/zapret2/init.d/pfsense/: zapret2.sh
reference/zapret2/init.d/runit/zapret2/: finish  run
reference/zapret2/init.d/s6/zapret2/: down  up
reference/zapret2/init.d/systemd/: nfqws2@.service  zapret2-list-update.service  zapret2-list-update.timer  zapret2.service
reference/zapret2/init.d/sysv/: functions  zapret2
reference/zapret2/ip2net/: Makefile
reference/zapret2/ipset/: create_ipset.sh  def.sh
reference/zapret2/mdig/: Makefile
reference/zapret2/nfq2/: BSDmakefile  Makefile  checksum.c  checksum.h  conntrack.c  conntrack.h  conntrack_base.h  darkmagic.c  darkmagic.h  desync.c  desync.h  filter.c  filter.h  gzip.c  gzip.h  helpers.c  helpers.h  hostlist.c  ipset.c  ipset.h  lua.c  lua.h  nfqws.c  nfqws.h  packet_queue.c  packet_queue.h  params.c  params.h  pools.c  pools.h  protocol.c  protocol.h  random.c  random.h  sec.c  win.c  win.h
reference/zapret2/nfq2/andr/: netlink.c
reference/zapret2/nfq2/crypto/: aes-ctr.c  aes-ctr.h  aes.h
reference/zapret2/nfq2/windows/: nthacks.h
reference/zapret2/nfq2/windows/netinet/: ip_icmp.h
reference/zapret2/nfq2/windows/res/: howto.txt  winws.manifest  winws.rc
scripts/: ci-integration.sh  ci-local.sh  dev-container.sh  install.sh
src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  persist.rs  tracing_otel.rs  ui.rs
src/cmd/: benchmark.rs  check.rs  completions.rs  mod.rs  scan.rs  status.rs  universal.rs
src/firewall/: mod.rs  nftables.rs
src/network/: curl.rs  dns.rs  doh.rs  http_client.rs  isp.rs  mod.rs  reachability.rs  route.rs  update_check.rs  via.rs
src/pipeline/: baseline.rs  benchmark.rs  check.rs  mod.rs  report.rs  runner.rs  scan_report.rs  test_report.rs  test_runner.rs  verify.rs  worker_task.rs
src/strategy/: generator.rs  mod.rs  rank.rs
src/system/: elevate.rs  mod.rs  process.rs
src/worker/: mod.rs  nfqws2.rs  slot.rs
strategies/: http.txt  tls12.txt  tls13.txt
tests/: e2e_infra.rs  parallel_benchmark.rs
tools/: test_strategy.sh  update_strategies.sh
tools/strategy-diff/: dump_vanilla_real.sh
(+3 files in other folders)
