[package]
name = "blockcheckw"
version = "0.7.1"
edition = "2021"
description = "blockcheck.sh wrapper for better scanning speed"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "signal", "macros", "net", "io-util"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
nix = { version = "0.29", features = ["user", "resource", "fs", "process"] }

[dev-dependencies]

[[test]]
name = "parallel_benchmark"
path = "tests/parallel_benchmark.rs"

[[test]]
name = "e2e_infra"
path = "tests/e2e_infra.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
